[gd_scene load_steps=2 format=3 uid="uid://b3h3h1s7kcegt"]

[ext_resource type="Script" path="res://scenes/select.gd" id="1_wm4ln"]

[node name="Select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wm4ln")
metadata/_edit_lock_ = true

[node name="Buttons" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -140.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Overcast" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Overcast"

[node name="Spacer1" type="Control" parent="Buttons"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="AbyssalChronos" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Abyssal Chronos"

[node name="Spacer2" type="Control" parent="Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Back" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Back to Menu"

[connection signal="pressed" from="Buttons/Overcast" to="." method="_on_overcast_pressed"]
[connection signal="pressed" from="Buttons/AbyssalChronos" to="." method="_on_abyssal_chronos_pressed"]
[connection signal="pressed" from="Buttons/Back" to="." method="_on_back_pressed"]
